tests/snapshots/tui_snapshots__settings_dialog_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 80, 24)"
---
 ◆ skilled   global                              ● ready · 0 sources registered
 Settings   navigation is locked while this dialog is open



      ┌ Settings ────────────────────────────────────────── global scope ┐
      │                                                                  │
      │  Setup                                                           │
      │                                                                  │
      │  ▌ Rerun setup                                                   │
      │                                                                  │
      │  Reset setup completion and return to Welcome.                   │
      │  Agent root and executable detection is refreshed.               │
      │  Agent selections and registered sources are retained.           │
      │  Enter reruns setup; Esc closes Settings.                        │
      │  ──────────────────────────────────────────────────────────────  │
      │  No agent is launched                   Enter Rerun   Esc Close  │
      │                                                                  │
      └──────────────────────────────────────────────────────────────────┘




 Enter Rerun setup   ? Help   Esc Close
