tests/snapshots/tui_snapshots__setup_catalog_confirmation_reserves_space_for_wrapped_focused_content.snap
---
source: tests/tui_snapshots.rs
expression: rendered
---
 ◆ skilled   global                                         ● setup in progress
 Setup · Confirm catalogs   navigation is locked during setup
  ┌ First-run setup ───────────────────────────────────── global skills only ┐
  │                                                                          │
  │  ✓━━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ●━━━━━━━━ ○──────── ○────────  │
  │  STEP 5 / 7                                                              │
  │  Confirm catalogs                                                        │
  │                                                                          │
  │  Repository: a-deliberately-long-s... · /private/var/f...directory-name  │
  │  Branch: main   HEAD: [HEAD]                                             │
  │  Remote: not configured                                                  │
  │  Worktree: ✓ clean                                                       │
  │                                                                          │
  │    Included · catalogs/set-3-with-...e/claude-code/skills · 1 candidate  │
  │    Agent-specific catalog · Claude Code: yes · Codex: no · OpenCode: no  │
  │    Included · catalogs/set-4-with-...e/claude-code/skills · 1 candidate  │
  │    Agent-specific catalog · Claude Code: yes · Codex: no · OpenCode: no  │
  │  ▌ Included · catalogs/set-5-with-...e/claude-code/skills · 1 candidate  │
  │    Agent-specific catalog · Claude Code: yes · Codex: no · OpenCode: no  │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Registration records metadata only         Esc Cancel   Enter Register  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 j/k Move   Space Include   c Class   1/2/3 Agents   Enter Register   Esc Cancel
