tests/snapshots/tui_snapshots__setup_summary_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 80, 24)"
---
 ◆ skilled   global                                         ● setup in progress
 Setup · Summary   navigation is locked during setup
  ┌ First-run setup ───────────────────────────────────── global skills only ┐
  │                                                                          │
  │  ✓━━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ●━━━━━━━━  │
  │  STEP 7 / 7                                                              │
  │  Summary                                                                 │
  │                                                                          │
  │  Setup is ready to finish.                                               │
  │                                                                          │
  │  Configured agents: 3                                                    │
  │  Sources: 0   Skills: 0                                                  │
  │  Installed: 0   Unmanaged: 0   Broken: 0                                 │
  │                                                                          │
  │  Unresolved findings never force a repair.                               │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Setup is persisted when it finishes         Esc Back   Enter Inventory  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 Enter Inventory   Esc Back   ? Help   q Quit
