tests/snapshots/tui_snapshots__sources_detail_too_tall_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: screen
---
 ◆ skilled  global
 1 Inventory    │ 2 Sources ·1   │ 3 Updates      │ 4 Doctor       │                      ● ready · 1 source registered
▌ Repositories  1 registered     │   Available variants  1 found                │   Details  verbose
─────────────────────────────────│ ─────────────────────────────────────────────│ ─────────────────────────────────────
▌ source                         │ skills                    Common · all agents│ REPOSITORY
▌ [TEMP]/source                  │ ▌ ✓ valid verbose                            │ ─────────────────────────────────────
▌ ✓ clean main@[SHORT]           │                                              │ Label: source · Branch: main
                                 │                                              │ Path: [TEMP]/source
                                 │                                              │ HEAD: [SHORT]
                                 │                                              │ Remote: not configured
                                 │                                              │ Status: ✓ clean
                                 │                                              │ Last saved scan: [SCAN]
                                 │                                              │ CATALOG
                                 │                                              │ ─────────────────────────────────────
                                 │                                              │ Path: skills · Classification: Common
                                 │                                              │ Registered for: all agents
                                 │                                              │ VARIANT
                                 │                                              │ ─────────────────────────────────────
                                 │                                              │ Directory: verbose · Name: verbose
                                 │                                              │ Path: skills/verbose
                                 │                                              │ Status: ✓ valid
                                 │                                              │ Description: A description long
                                 │                                              │ ! 5 more lines
 Tab/Shift-Tab Region   x Forget   Enter Open   a Add source   1 Inventory   4 Doctor   ? Help   q Quit   Esc Back
