tests/snapshots/tui_snapshots__sources_details_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_sources_screen(&app, &temporary, render(&app, 80, 24))"
---
 ◆ skilled  global                                ● ready · 1 source registered
 1 Inventory    │ 2 Sources ·1   │ 3 Updates      │ 4 Doctor       │
 ▌ Details  broken
 ──────────────────────────────────────────────────────────────────────────────
 REPOSITORY
 ──────────────────────────────────────────────────────────────────────────────
 Label: source · Branch: main
 Path: [TEMP]/source
 HEAD: [SHORT]
 Remote: https://example.test/source.git
 Status: ✓ clean · Last saved scan: [SCAN]
 CATALOG
 ──────────────────────────────────────────────────────────────────────────────
 Path: skills · Classification: Common
 Registered for: all agents
 VARIANT
 ──────────────────────────────────────────────────────────────────────────────
 Directory: broken · Name: broken
 Path: skills/broken
 Status: × invalid
 Validation error: skill does not contain a readable file named exactly
 SKILL.md

 Tab/Shift-Tab Region   a Add source   1 Inventory   4 Doctor   Esc Back …
