tests/snapshots/tui_snapshots__sources_long_catalog_path_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_sources_screen(&app, &temporary, render(&app, 80, 24))"
---
 ◆ skilled  global                                ● ready · 1 source registered
 1 Inventory    │ 2 Sources ·1   │ 3 Updates      │ 4 Doctor       │
 ▌ Details  experimental
 ──────────────────────────────────────────────────────────────────────────────
 REPOSITORY
 ──────────────────────────────────────────────────────────────────────────────
 Label: source · Branch: main
 Path: [TEMP]/source
 HEAD: [SHORT]
 Remote: https://example.test/an-organisation-with-a-long-name/source.git
 Status: ✓ clean · Last scan: [SCAN]
 CATALOG
 ──────────────────────────────────────────────────────────────────────────────
 Path: deeply/nested/experimental/claude-code/skills
 Classification: Agent-specific
 Registered for: Claude Code
 VARIANT
 ──────────────────────────────────────────────────────────────────────────────
 Directory: experimental · Name: experimental
 Path: deeply/nested/experimental/claude-code/skills/experimental
 Status: ✓ valid
 Description: Experimental fixture

 Tab/Shift-Tab Region   i Install   p Confirm origin   a Add source   Esc Back …
