tests/snapshots/tui_snapshots__sources_long_catalog_path_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_sources_screen(&app, &temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆ skilled  global                                                                                                    ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                │                │                │                │                                                  ▏
▕ 1 Inventory    │ 2 Sources ·1   │ 3 Updates      │ 4 Doctor       │                    ● ready · 1 source registered ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕▌ Repositories  1 registered    │   Available variants  1 found               │   Details  experimental               ▏
▕────────────────────────────────│ ────────────────────────────────────────────│ ───────────────────────────────────── ▏
▕▌ source                        │ deeply/nested/experim...l/claude-code/skills│ REPOSITORY                            ▏
▕▌ [TEMP]/source                 │ ▌ ✓ valid experimental                      │ ───────────────────────────────────── ▏
▕▌ ✓ clean main@[SHORT]          │                                             │ Label: source · Branch: main          ▏
▕                                │                                             │ Path: [TEMP]/source                   ▏
▕                                │                                             │ HEAD: [SHORT]                         ▏
▕                                │                                             │ Remote: https://examp...me/source.git ▏
▕                                │                                             │ Status: ✓ clean                       ▏
▕                                │                                             │ Last saved scan: [SCAN]               ▏
▕                                │                                             │ CATALOG                               ▏
▕                                │                                             │ ───────────────────────────────────── ▏
▕                                │                                             │ Path: deeply/nested/...de-code/skills ▏
▕                                │                                             │ Classification: Agent-specific        ▏
▕                                │                                             │ Registered for: Claude Code           ▏
▕                                │                                             │ VARIANT                               ▏
▕                                │                                             │ ───────────────────────────────────── ▏
▕                                │                                             │ Directory: experimental · Name: ex... ▏
▕                                │                                             │ Path: deeply/nested/experimental/c... ▏
▕                                │                                             │ Status: ✓ valid                       ▏
▕                                │                                             │ Description: Experimental fixture     ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                                                                                                      ▏
▕ Tab/Shift-Tab Region   x Forget   Enter Open   a Add source   1 Inventory   4 Doctor   ? Help   q Quit   Esc Back    ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
