tests/snapshots/tui_snapshots__sources_populated_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_sources_screen(&app, &temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆ skilled  global                                                                                                    ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                │                │                │                │                                                  ▏
▕ 1 Inventory    │ 2 Sources ·1   │ 3 Updates      │ 4 Doctor       │                    ● ready · 1 source registered ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕▌ Repositories  1 registered    │   Available variants  3 found               │   Details  broken                     ▏
▕────────────────────────────────│ ────────────────────────────────────────────│ ───────────────────────────────────── ▏
▕▌ source                        │ experimental/claude-code/skills  Claude Code│ REPOSITORY                            ▏
▕▌ [TEMP]/source                 │   ✓ valid experimental                      │ ───────────────────────────────────── ▏
▕▌ ✓ clean main@[SHORT]          │ skills                   Common · all agents│ Label: source · Branch: main          ▏
▕                                │ ▌ × invalid broken                          │ Path: [TEMP]/source                   ▏
▕                                │   ✓ valid portable                          │ HEAD: [SHORT]                         ▏
▕                                │                                             │ Remote: https://examp...st/source.git ▏
▕                                │                                             │ Status: ✓ clean                       ▏
▕                                │                                             │ Last saved scan: [SCAN]               ▏
▕                                │                                             │ CATALOG                               ▏
▕                                │                                             │ ───────────────────────────────────── ▏
▕                                │                                             │ Path: skills · Classification: Common ▏
▕                                │                                             │ Registered for: all agents            ▏
▕                                │                                             │ VARIANT                               ▏
▕                                │                                             │ ───────────────────────────────────── ▏
▕                                │                                             │ Directory: broken · Name: broken      ▏
▕                                │                                             │ Path: skills/broken                   ▏
▕                                │                                             │ Status: × invalid                     ▏
▕                                │                                             │ Validation error: skill does not      ▏
▕                                │                                             │ contain a readable file named exactly ▏
▕                                │                                             │ SKILL.md                              ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                                                                                                      ▏
▕ Tab/Shift-Tab Region   x Forget   Enter Open   a Add source   1 Inventory   4 Doctor   ? Help   q Quit   Esc Back    ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
