tests/snapshots/tui_snapshots__undersized_terminal_shows_a_recoverable_notice.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 60, 14)"
---
┌ Terminal too small ──────────────────────────────────────┐
│    Skilled needs at least 80×24. Current size: 60×14.    │
│             Resize the terminal to continue.             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
